# holedeep

./: CONTRIBUTING.md  LICENSE  README.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  Blockers.css  Blockers.tsx  Onboarding.css  Onboarding.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: blocker.rs  capture.rs  config.rs  lib.rs  live.rs  main.rs  overlay.rs  permissions.rs  timer.rs
src/overlay/: fakeDesktop.ts  main.ts  renderer.ts  shader.ts
